--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -1,8 +1,13 @@
+.mainForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 form{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    height: 40%;
     gap: 10px;
 }
 input{
@@ -10,4 +15,26 @@ input{
     height: 30px;
     background-color: var(--grey3);
     padding: 5px;
+}
+select{
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    font-size: 14px;
+    border: 1px solid var(--grey1);
+    background-color: var(--grey3);
+    width: 200px;
+    height: 25px;
+    border-radius: 5px;
+    padding: 3px;
+    background: url(../../src/assets/setas-para-baixo.png) no-repeat center right var(--grey3);
+    background-size: 10px;
+    margin-bottom: 10px;
+}
+.containerRadio{
+    display: flex;
+    align-items: center;
+}
+input[type="radio"]{
+    width: 15px;
 }
