--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,11 @@
-footer{
+.footer1{
     position: absolute;
     bottom: 0;
+}
+.footer2{
+    position: static;
+}
+.footer1, .footer2{
     width: 100%;
     background-color: #000;
     color: #fff;
